Removes warnings, cleans up code, occasionally corrects spelling across project